tests/sema/fail/v5_fail_slice_struct_array.ep
# COMPILE_FAIL: slice only supports str and u8[]
struct Token {
    kind: i64
}

fun main(): void {
    let xs = new Token[1]
    let ys = xs[0:1]
}
